cmake_minimum_required(VERSION 3.17)
project(project-euler-solutions-cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(1_MultipleOf3And5 1_MultipleOf3And5/Solution.cpp)
add_executable(2_EvenFibonacciNumbers 2_EvenFibonacciNumbers/Solution.cpp)
add_executable(3_LargestPrimeNumber 3_LargestPrimeNumber/Solution.cpp)
add_executable(4_LargestPalindromeProduct 4_LargestPalindromeProduct/Solution.cpp)

